--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -184,34 +184,38 @@
 # CVE-2021-44857 1.37.1/1.36.3/1.35.5 https://www.mediawiki.org/wiki/2021-12_security_release/FAQ https://lists.wikimedia.org/hyperkitty/list/wikitech-l@lists.wikimedia.org/thread/QEN3EK4JXAVJMJ5GF3GYOAKNJPEKFQYA/ https://phabricator.wikimedia.org/T297322
 # CVE-2021-44858 1.37.1/1.36.3/1.35.5 https://www.mediawiki.org/wiki/2021-12_security_release/FAQ
 # CVE-2021-45038 1.37.1/1.36.3/1.35.5 https://www.mediawiki.org/wiki/2021-12_security_release/FAQ https://lists.wikimedia.org/hyperkitty/list/wikitech-l@lists.wikimedia.org/thread/QEN3EK4JXAVJMJ5GF3GYOAKNJPEKFQYA/  https://phabricator.wikimedia.org/T297574
+# CVE-2022-28201 1.37.2/1.36.4/1.35.6 https://lists.wikimedia.org/hyperkitty/list/mediawiki-announce@lists.wikimedia.org/thread/YJNXKPV5Z56NSUQ4G3SXPDUIZG5EQ7UR/
+# CVE-2022-28202 1.37.2/1.36.4/1.35.6 https://lists.wikimedia.org/hyperkitty/list/mediawiki-announce@lists.wikimedia.org/thread/YJNXKPV5Z56NSUQ4G3SXPDUIZG5EQ7UR/
+# CVE-2022-28203 1.37.2/1.36.4/1.35.6 https://lists.wikimedia.org/hyperkitty/list/mediawiki-announce@lists.wikimedia.org/thread/YJNXKPV5Z56NSUQ4G3SXPDUIZG5EQ7UR/
+# CVE-2022-28204 1.37.2/1.36.4/1.35.6 https://lists.wikimedia.org/hyperkitty/list/mediawiki-announce@lists.wikimedia.org/thread/YJNXKPV5Z56NSUQ4G3SXPDUIZG5EQ7UR/
 MediaWiki 1.37:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.37.1'
+    secure_version: '1.37.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.37\.[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-44854 https://nvd.nist.gov/vuln/detail/CVE-2021-44855 https://nvd.nist.gov/vuln/detail/CVE-2021-44856 https://nvd.nist.gov/vuln/detail/CVE-2021-44857 https://nvd.nist.gov/vuln/detail/CVE-2021-44858 https://nvd.nist.gov/vuln/detail/CVE-2021-45038'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2022-28201 https://nvd.nist.gov/vuln/detail/CVE-2022-28202 https://nvd.nist.gov/vuln/detail/CVE-2022-28203 https://nvd.nist.gov/vuln/detail/CVE-2022-28204 https://lists.wikimedia.org/hyperkitty/list/mediawiki-announce@lists.wikimedia.org/thread/YJNXKPV5Z56NSUQ4G3SXPDUIZG5EQ7UR/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.36:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.36.3'
+    secure_version: '1.36.4'
     regexp: ['\$wgVersion.*?(?P<version>1\.36\.[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-44854 https://nvd.nist.gov/vuln/detail/CVE-2021-44855 https://nvd.nist.gov/vuln/detail/CVE-2021-44856 https://nvd.nist.gov/vuln/detail/CVE-2021-44857 https://nvd.nist.gov/vuln/detail/CVE-2021-44858 https://nvd.nist.gov/vuln/detail/CVE-2021-45038'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2022-28201 https://nvd.nist.gov/vuln/detail/CVE-2022-28202 https://nvd.nist.gov/vuln/detail/CVE-2022-28203 https://nvd.nist.gov/vuln/detail/CVE-2022-28204 https://lists.wikimedia.org/hyperkitty/list/mediawiki-announce@lists.wikimedia.org/thread/YJNXKPV5Z56NSUQ4G3SXPDUIZG5EQ7UR/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.35:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.35.5'
+    secure_version: '1.35.6'
     regexp: ['\$wgVersion.*?(?P<version>1\.35\.[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-44854 https://nvd.nist.gov/vuln/detail/CVE-2021-44855 https://nvd.nist.gov/vuln/detail/CVE-2021-44856 https://nvd.nist.gov/vuln/detail/CVE-2021-44857 https://nvd.nist.gov/vuln/detail/CVE-2021-44858 https://nvd.nist.gov/vuln/detail/CVE-2021-45038'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2022-28201 https://nvd.nist.gov/vuln/detail/CVE-2022-28202 https://nvd.nist.gov/vuln/detail/CVE-2022-28203 https://nvd.nist.gov/vuln/detail/CVE-2022-28204 https://lists.wikimedia.org/hyperkitty/list/mediawiki-announce@lists.wikimedia.org/thread/YJNXKPV5Z56NSUQ4G3SXPDUIZG5EQ7UR/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.34:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.37.1'
+    secure_version: '1.37.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.34\.[0-9.]{1,})']
     cve: 'MediaWiki 1.34 is end of life. Please see: https://lists.wikimedia.org/pipermail/mediawiki-announce/2020-November/000266.html'
     fingerprint: detect_general
@@ -219,7 +223,7 @@ MediaWiki 1.34:
 MediaWiki 1.33:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.37.1'
+    secure_version: '1.37.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.33\.[0-9.]{1,})']
     cve: 'MediaWiki 1.33 is end of life. Please see: https://lists.wikimedia.org/pipermail/mediawiki-announce/2020-June/000253.html'
     fingerprint: detect_general
@@ -227,7 +231,7 @@ MediaWiki 1.33:
 MediaWiki 1.32:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.37.1'
+    secure_version: '1.37.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.32\.[0-9.]{1,})']
     cve: 'MediaWiki 1.32 is end of life. Please see: https://lists.wikimedia.org/pipermail/mediawiki-announce/2020-January/000245.html'
     fingerprint: detect_general
@@ -235,7 +239,7 @@ MediaWiki 1.32:
 MediaWiki 1.31:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.37.1'
+    secure_version: '1.37.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.31\.[0-9.]{1,})']
     cve: 'MediaWiki 1.31 is end of life.'
     fingerprint: detect_general
@@ -243,7 +247,7 @@ MediaWiki 1.31:
 MediaWiki 1.30:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.37.1'
+    secure_version: '1.37.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.30\.[0-9.]{1,})']
     cve: 'MediaWiki 1.30 is end of life.'
     fingerprint: detect_general
@@ -251,7 +255,7 @@ MediaWiki 1.30:
 MediaWiki 1.29:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.37.1'
+    secure_version: '1.37.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.29\.[0-9.]{1,})']
     cve: 'MediaWiki 1.29 is end of life.'
     fingerprint: detect_general
@@ -259,7 +263,7 @@ MediaWiki 1.29:
 MediaWiki 1.28:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.37.1'
+    secure_version: '1.37.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.28\.[0-9.]{1,})']
     cve: 'MediaWiki 1.28 is end of life.'
     fingerprint: detect_general
@@ -267,7 +271,7 @@ MediaWiki 1.28:
 MediaWiki 1.27:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.37.1'
+    secure_version: '1.37.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.27\.[0-9.]{1,})']
     cve: 'MediaWiki 1.27 is end of life.'
     fingerprint: detect_general
@@ -275,7 +279,7 @@ MediaWiki 1.27:
 MediaWiki 1.26:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.37.1'
+    secure_version: '1.37.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.26\.[0-9.]{1,})']
     cve: 'MediaWiki 1.26 is end of life.'
     fingerprint: detect_general
@@ -283,7 +287,7 @@ MediaWiki 1.26:
 MediaWiki 1.25:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.37.1'
+    secure_version: '1.37.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.25\.[0-9.]{1,})']
     cve: 'MediaWiki 1.25 is end of life.'
     fingerprint: detect_general
@@ -291,7 +295,7 @@ MediaWiki 1.25:
 MediaWiki 1.24:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.37.1'
+    secure_version: '1.37.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.24\.[0-9.]{1,})']
     cve: 'MediaWiki 1.24 is end of life.'
     fingerprint: detect_general
@@ -299,7 +303,7 @@ MediaWiki 1.24:
 MediaWiki 1.23:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.37.1'
+    secure_version: '1.37.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.23\.[0-9.]{1,})']
     cve: 'MediaWiki 1.23 is end of life.'
     fingerprint: detect_general
@@ -307,7 +311,7 @@ MediaWiki 1.23:
 MediaWiki 1.22:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.37.1'
+    secure_version: '1.37.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.22\.[0-9.]{1,})']
     cve: 'MediaWiki 1.22 is end of life.'
     fingerprint: detect_general
@@ -315,7 +319,7 @@ MediaWiki 1.22:
 MediaWiki 1.21:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.37.1'
+    secure_version: '1.37.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.21\.[0-9.]{1,})']
     cve: 'MediaWiki 1.21 is end of life.'
     fingerprint: detect_general
@@ -323,7 +327,7 @@ MediaWiki 1.21:
 MediaWiki 1.20:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.37.1'
+    secure_version: '1.37.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.20\.[0-9.]{1,})']
     cve: 'MediaWiki 1.20 is end of life.'
     fingerprint: detect_general
@@ -331,7 +335,7 @@ MediaWiki 1.20:
 MediaWiki 1.19:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.37.1'
+    secure_version: '1.37.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.19\.[0-9.]{1,})']
     cve: 'MediaWiki 1.19 is end of life.'
     fingerprint: detect_general
@@ -339,7 +343,7 @@ MediaWiki 1.19:
 MediaWiki 1.18:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.37.1'
+    secure_version: '1.37.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.1[0-8]\.[0-9.]{1,})']
     cve: 'MediaWiki 1.18 is end of life.'
     fingerprint: detect_general
