--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -842,7 +842,7 @@ WordPress plugin persian-woocommerce-sms:
     cve: 'https://0x62626262.wordpress.com/2016/04/21/persian-woocommerce-sms-xss-vulnerability/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
-# CVE-2012-6692 2.2
+# CVE-2012-6692 2.2 https://yoast.com/wordpress-seo-2-2/ https://seclists.org/fulldisclosure/2015/Jun/40 https://packetstormsecurity.com/files/132294/WordPress-Yoast-2.1.1-Cross-Site-Scripting.html https://wordpress.org/support/topic/security-issue-with-post-title-field-xss-vulnerability/
 WordPress plugin wordpress-seo:
   1:
     location: ['/wp-content/plugins/wordpress-seo/readme.txt']
