--- a/yamls/bigtree.yml
+++ b/yamls/bigtree.yml
@@ -44,7 +44,7 @@
 # CVE-2018-17341 4.3 https://github.com/bigtreecms/BigTree-CMS/issues/345
 # CVE-2018-18308 4.3.4 https://github.com/bigtreecms/BigTree-CMS/issues/356 https://github.com/bigtreecms/BigTree-CMS/issues/356 https://github.com/bigtreecms/BigTree-CMS/commit/ffd668a3aa7d2f540dbcdf5751f207302519df72 https://packetstormsecurity.com/files/149788/BigTree-CMS-4.2.23-Cross-Site-Scripting.html https://www.exploit-db.com/exploits/45628
 # CVE-2018-18380 4.2.24 https://github.com/bigtreecms/BigTree-CMS/commit/c69402c4764ed9a76301c57277aefe70141b6418
-# CVE-2018-20405 N/A https://github.com/bigtreecms/BigTree-CMS/issues/354 path disclosure
+# CVE-2018-20405 N/A https://github.com/bigtreecms/BigTree-CMS/issues/354 needs access as admin, which is expected to have full access according to developers
 # CVE-2018-1000521 4.2.22 https://github.com/bigtreecms/BigTree-CMS/issues/328
 # CVE-2020-995566 4.4.12 https://www.netsparker.com/web-applications-advisories/ns-20-004-cross-site-scripting-in-bigtreecms/ https://github.com/bigtreecms/BigTree-CMS/commit/33d0f2a80df5af9363bcf39a24a341c0d860714c https://lists.openwall.net/full-disclosure/2020/12/11/1
 # CVE-2020-26668 TODO
