WordPress plugin ninja-forms fixes security vulnerability

--- a/yamls/elefantcms.yml
+++ b/yamls/elefantcms.yml
@@ -3,6 +3,13 @@
 # CVE-2012-1296
 # CVE-2012-6521
 # CVE-2012-XXXX 1.1.5/1.0.2 https://www.htbridge.ch/advisory/HTB23076
+# CVE-2017-20057 TODO
+# CVE-2017-20058 TODO
+# CVE-2017-20059 TODO
+# CVE-2017-20060 TODO
+# CVE-2017-20061 TODO
+# CVE-2017-20062 TODO
+# CVE-2017-20063 TODO
 # CVE-2017-20064 TODO
 # TODO https://www.curesec.com/blog/article/blog/Elefant-CMS-1312-RC-Multiple-Persistent-and-Reflected-XSS-191.html
 # TODO https://www.curesec.com/blog/article/blog/Elefant-CMS-1312-RC-CSRF-189.html
