--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -858,12 +858,14 @@ WordPress plugin wordpress-seo:
 # CVE-2021-24164 3.4.34.1 https://www.wordfence.com/blog/2021/02/one-million-sites-affected-four-severe-vulnerabilities-patched-in-ninja-forms/ https://threatpost.com/ninja-forms-wordpress-plugin-hacks/164042/
 # CVE-2021-24165 3.4.34.1 https://www.wordfence.com/blog/2021/02/one-million-sites-affected-four-severe-vulnerabilities-patched-in-ninja-forms/ https://threatpost.com/ninja-forms-wordpress-plugin-hacks/164042/
 # CVE-2021-24166 3.4.34.1 https://www.wordfence.com/blog/2021/02/one-million-sites-affected-four-severe-vulnerabilities-patched-in-ninja-forms/ https://threatpost.com/ninja-forms-wordpress-plugin-hacks/164042/
+# CVE-2021-34647 3.5.8 https://www.wordfence.com/blog/2021/09/recently-patched-vulnerabilities-in-ninja-forms-plugin-affects-over-1-million-site-owners/
+# CVE-2021-34648 3.5.8 https://www.wordfence.com/blog/2021/09/recently-patched-vulnerabilities-in-ninja-forms-plugin-affects-over-1-million-site-owners/
 WordPress plugin ninja-forms:
   1:
     location: ['/wp-content/plugins/ninja-forms/readme.txt']
-    secure_version: '3.5.8'
+    secure_version: '3.6.11'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-34647 https://nvd.nist.gov/vuln/detail/CVE-2021-34648 https://www.wordfence.com/blog/2021/09/recently-patched-vulnerabilities-in-ninja-forms-plugin-affects-over-1-million-site-owners/'
+    cve: 'https://www.wordfence.com/blog/2022/06/psa-critical-vulnerability-patched-in-ninja-forms-wordpress-plugin/'  # TODO: No CVE. Article says pending so maybe it has been requested
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin ninja-forms-uploads:
