--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -188,6 +188,8 @@
 # CVE-2022-28202 1.37.2/1.36.4/1.35.6 https://lists.wikimedia.org/hyperkitty/list/mediawiki-announce@lists.wikimedia.org/thread/YJNXKPV5Z56NSUQ4G3SXPDUIZG5EQ7UR/
 # CVE-2022-28203 1.37.2/1.36.4/1.35.6 https://lists.wikimedia.org/hyperkitty/list/mediawiki-announce@lists.wikimedia.org/thread/YJNXKPV5Z56NSUQ4G3SXPDUIZG5EQ7UR/
 # CVE-2022-28204 1.37.2/1.36.4/1.35.6 https://lists.wikimedia.org/hyperkitty/list/mediawiki-announce@lists.wikimedia.org/thread/YJNXKPV5Z56NSUQ4G3SXPDUIZG5EQ7UR/
+# CVE-2022-34911 TODO
+# CVE-2022-34912 TODO
 MediaWiki 1.37:
   1:
     location: ['/includes/DefaultSettings.php']
