--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -96,7 +96,7 @@
 # https://drupal.org/SA-CORE-2019-006   CVE-2019-11358  8.6.15/8.5.15/7.66
 # https://drupal.org/SA-CORE-2019-007   CVE-2019-11831  8.7.1/8.6.16/7.67
 # https://drupal.org/SA-CORE-2019-008   CVE-2019-6342   8.7.5
-# https://drupal.org/SA-CORE-2020-001   TODO            8.8.4/8.7.12
+# https://drupal.org/SA-CORE-2020-001   N/A             8.8.4/8.7.12
 # https://drupal.org/SA-CORE-2020-002   CVE-2020-11022/CVE-2020-11023   8.8.6/8.7.14/7.70
 # https://drupal.org/SA-CORE-2020-003   CVE-2020-13662  7.70
 # https://drupal.org/SA-CORE-2020-004   CVE-2020-13663  9.0.1/8.9.1/8.8.8/7.72
@@ -124,25 +124,40 @@
 # https://drupal.org/SA-CORE-2022-001   CVE-2021-41183  9.3.3/9.2.11/7.86
 # https://drupal.org/SA-CORE-2022-002   CVE-2010-5312/CVE-2016-7103/CVE-2021-41182/CVE-2021-41183   7.86
 # https://drupal.org/SA-CORE-2022-003   CVE-2022-25271  9.3.6/9.2.13/7.88
-# https://drupal.org/SA-CORE-2022-004 TODO
-# https://drupal.org/SA-CORE-2022-005 TODO
-# https://drupal.org/SA-CORE-2022-006 TODO
-# https://drupal.org/SA-CORE-2022-007 TODO
-# https://drupal.org/SA-CORE-2022-008 TODO
+# https://drupal.org/SA-CORE-2022-004   CVE-2022-25270  9.3.6/9.2.13
+# https://drupal.org/SA-CORE-2022-005   CVE-2022-24728/CVE-2022-24729   9.3.8/9.2.15
+# https://drupal.org/SA-CORE-2022-006   CVE-2022-24775  9.3.9/9.2.16
+# https://drupal.org/SA-CORE-2022-007   N/A
+# https://drupal.org/SA-CORE-2022-008   CVE-2022-25273  9.3.12/9.2.18
+# https://drupal.org/SA-CORE-2022-009   CVE-2022-25274  9.3.12
+# https://drupal.org/SA-CORE-2022-010   CVE-2022-29248  9.3.14/9.2.20
+# https://drupal.org/SA-CORE-2022-011   CVE-2022-31042/CVE-2022-31043   9.4.0-rc2/9.3.16/9.2.21
+# https://drupal.org/SA-CORE-2022-012   CVE-2022-25275  9.4.3/9.3.19/7.91
+# https://drupal.org/SA-CORE-2022-013   CVE-2022-25278  9.4.3/9.3.19
+# https://drupal.org/SA-CORE-2022-014   CVE-2022-25277  9.4.3/9.3.19
+# https://drupal.org/SA-CORE-2022-015   CVE-2022-25276  9.4.3/9.3.19
+Drupal 9.4:
+  1:
+    location: ['/core/lib/Drupal.php']
+    secure_version: '9.4.3'
+    regexp: ['  const VERSION.*?(?P<version>9\.4\.[0-9]{1,})']
+    cve: 'https://drupal.org/SA-CORE-2022-012 https://drupal.org/SA-CORE-2022-013 https://drupal.org/SA-CORE-2022-014 https://drupal.org/SA-CORE-2022-015'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
 Drupal 9.3:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '9.3.6'
-    regexp: ['  const VERSION.*?(?P<version>9\.2\.[0-9]{1,})']
-    cve: 'https://drupal.org/SA-CORE-2022-003'
+    secure_version: '9.3.19'
+    regexp: ['  const VERSION.*?(?P<version>9\.3\.[0-9]{1,})']
+    cve: 'https://drupal.org/SA-CORE-2022-012 https://drupal.org/SA-CORE-2022-013 https://drupal.org/SA-CORE-2022-014 https://drupal.org/SA-CORE-2022-015'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 9.2:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '9.2.13'
+    secure_version: '9.2.21'
     regexp: ['  const VERSION.*?(?P<version>9\.2\.[0-9]{1,})']
-    cve: 'https://drupal.org/SA-CORE-2022-003'
+    cve: 'https://drupal.org/SA-CORE-2022-011'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 9.1:
@@ -156,7 +171,7 @@ Drupal 9.1:
 Drupal 9.0:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '9.3.6'
+    secure_version: '9.4.3'
     regexp: ['  const VERSION.*?(?P<version>9\.0\.[0-9]{1,})']
     cve: 'Drupal 9.0 is end of life.'
     fingerprint: detect_general
@@ -172,9 +187,9 @@ Drupal 8.9:
 Drupal 7:
   1:
     location: ['/includes/bootstrap.inc']
-    secure_version: '7.88'
+    secure_version: '7.91'
     regexp: ['define.*?VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://drupal.org/SA-CORE-2022-003'
+    cve: 'https://drupal.org/SA-CORE-2022-012'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 6:
