--- a/yamls/bigtree.yml
+++ b/yamls/bigtree.yml
@@ -51,6 +51,7 @@
 # CVE-2020-26669 TODO
 # CVE-2020-26670 TODO
 # CVE-2020-18467 TODO
+# CVE-2022-36197 TODO
 BigTree CMS:
   1:
     location: ['/core/version.php']
