--- a/yamls/microweber.yml
+++ b/yamls/microweber.yml
@@ -62,6 +62,25 @@
 # CVE-2020-19151 TODO
 # CVE-2020-19154 TODO
 # CVE-2020-19155 TODO
+# CVE-2022-1631 TODO
+# CVE-2022-2130 TODO
+# CVE-2022-2174 TODO
+# CVE-2022-2252 TODO
+# CVE-2022-2280 TODO
+# CVE-2022-2300 TODO
+# CVE-2022-2353 TODO
+# CVE-2022-2368 TODO
+# CVE-2022-2470 TODO
+# CVE-2021-36461 TODO
+# CVE-2022-2777 TODO
+# CVE-2022-3245 TODO
+# CVE-2022-3242 TODO
+# CVE-2022-33012 TODO
+# CVE-2022-0698 TODO
+# CVE-2022-4647 TODO
+# CVE-2022-4732 TODO
+# CVE-2022-4617 TODO
+# CVE-2023-0608 TODO
 Microweber:
   1:
     location: ['/src/Microweber/bootstrap.php']
