--- a/yamls/joomla.yml
+++ b/yamls/joomla.yml
@@ -249,12 +249,15 @@
 # CVE-2022-27912 TODO
 # CVE-2022-27913 TODO
 # CVE-2022-27914 4.2.5 https://www.joomla.org/announcements/release-news/5873-joomla-4-2-5-security-and-bug-fix-release.html https://developer.joomla.org/security-centre/887-20221101-core-rxss-through-reflection-of-user-input-in-com-media.html
+# CVE-2023-23750 TODO
+# CVE-2023-23751 TODO
+# CVE-2023-23752 4.2.8 https://developer.joomla.org/security-centre/894-20230201-core-improper-access-check-in-webservice-endpoints.html
 Joomla 4:
   1:
     location: ['/administrator/manifests/files/joomla.xml']
-    secure_version: '4.2.5'
+    secure_version: '4.2.8'
     regexp: ['[\t]<version>(?P<version>4\.[0-9.]{1,})']
-    cve: 'https://www.joomla.org/announcements/release-news/5873-joomla-4-2-5-security-and-bug-fix-release.html https://developer.joomla.org/security-centre/887-20221101-core-rxss-through-reflection-of-user-input-in-com-media.html https://nvd.nist.gov/vuln/detail/CVE-2022-27914'
+    cve: 'https://developer.joomla.org/security-centre/894-20230201-core-improper-access-check-in-webservice-endpoints.html https://nvd.nist.gov/vuln/detail/CVE-2023-23752'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Joomla 3:
