--- a/yamls/redmine.yml
+++ b/yamls/redmine.yml
@@ -46,11 +46,14 @@
 # CVE-2021-37156 4.2.2 https://www.redmine.org/news/132
 # CVE-2021-42326 4.2.3/4.1.5 https://www.redmine.org/news/133
 # CVE-2022-44030 5.0.4 https://www.redmine.org/news/139
+# CVE-2022-44031 5.0.4/4.2.9
+# CVE-2022-44637 5.0.4/4.2.9
+# N/A            5.0.5/4.2.10
 Redmine:
   1:
     location: ['/doc/CHANGELOG']
-    secure_version: '5.0.4'
+    secure_version: '5.0.5'
     regexp: ['== [0-9]{4}-[0-9]{2}-[0.9]{2}.*?v(?P<version>[0-9.]+)']
-    cve: 'https://www.redmine.org/news/139 https://nvd.nist.gov/vuln/detail/CVE-2022-44030'
+    cve: 'https://www.redmine.org/news/140'
     fingerprint: detect_redmine
     post_processing: ['php5.fcgi']
