--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -982,12 +982,13 @@ WordPress plugin remote-upload:
 # 2.4.1 https://www.wordfence.com/blog/2016/07/vulnerability-profile-builder/
 # 2.4.2 OVE-20160712-0014 https://sumofpwn.nl/advisory/2016/cross_site_scripting_vulnerability_in_profile_builder_wordpress_plugin.html
 # 3.1.1 https://www.wordfence.com/blog/2020/02/critical-vulnerability-in-profile-builder-plugin-allowed-site-takeover/
+# CVE-2022-0653 3.6.2 https://www.wordfence.com/blog/2022/02/reflected-cross-site-scripting-vulnerability-patched-in-wordpress-profile-builder-plugin/
 WordPress plugin profile-builder:
   1:
     location: ['/wp-content/plugins/profile-builder/readme.txt']
-    secure_version: '3.6.2'
+    secure_version: '3.9.1'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2022-0653 https://www.wordfence.com/blog/2022/02/reflected-cross-site-scripting-vulnerability-patched-in-wordpress-profile-builder-plugin/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2023-0814 https://www.wordfence.com/blog/2023/03/vulnerability-patched-in-cozmolabs-profile-builder-plugin-information-disclosure-leads-to-account-takeover/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # 2.3.7 https://sumofpwn.nl/advisory/2016/persistent_cross_site_scripting_in_all_in_one_seo_pack_wordpress_plugin.html
