--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -282,18 +282,19 @@
 # CVE-2022-21664 5.8.3 https://wordpress.org/news/2022/01/wordpress-5-8-3-security-release/ https://github.com/WordPress/wordpress-develop/security/advisories/GHSA-jp3p-gw8h-6x86 https://github.com/WordPress/wordpress-develop/commit/c09ccfbc547d75b392dbccc1ef0b4442ccd3c957
 # CVE-2021-20083 5.9.2 https://www.wordfence.com/blog/2022/03/wordpress-5-9-2-security-update-fixes-xss-and-prototype-pollution-vulnerabilities/
 # CVE-2022-3590 N/A https://www.sonarsource.com/blog/wordpress-core-unauthenticated-blind-ssrf/ non-issue
+# CVE-2023-2745 6.2.1 https://wordpress.org/news/2023/05/wordpress-6-2-1-maintenance-security-release/
 WordPress:
   1:
     location: ['/wp-includes/version.php', '/wp-includes/vars.php']
-    secure_version: '6.0.3'
+    secure_version: '6.2.1'
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://www.wordfence.com/blog/2022/10/patch-now-the-wordpress-6-0-3-security-update-contains-important-fixes/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2023-2745 https://wordpress.org/news/2023/05/wordpress-6-2-1-maintenance-security-release/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
   2:
     location: ['/b2-include/b2vars.php']
-    secure_version: '6.0.3'
+    secure_version: '6.2.1'
     regexp: ['\$b2_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://www.wordfence.com/blog/2022/10/patch-now-the-wordpress-6-0-3-security-update-contains-important-fixes/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2023-2745 https://wordpress.org/news/2023/05/wordpress-6-2-1-maintenance-security-release/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
