--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2825,12 +2825,13 @@ WordPress plugin yop-poll:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-9914 https://lists.openwall.net/full-disclosure/2019/02/05/15 https://security-consulting.icu/blog/2019/02/wordpress-yop-poll-xss/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# TODO 5.2.0 https://www.wordfence.com/blog/2019/03/xss-flaw-in-abandoned-cart-plugin-leads-to-wordpress-site-takeovers/ CVE Request Submitted 2023-06-21
 WordPress plugin woocommerce-abandoned-cart:
   1:
     location: ['/wp-content/plugins/woocommerce-abandoned-cart/readme.txt']
-    secure_version: '5.2.0'
+    secure_version: '5.15.1'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://www.wordfence.com/blog/2019/03/xss-flaw-in-abandoned-cart-plugin-leads-to-wordpress-site-takeovers/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2023-2986 https://wordfence.com/blog/2023/06/tyche-softwares-addresses-authentication-bypass-vulnerability-in-abandoned-cart-lite-for-woocommerce-wordpress-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin accelerated-mobile-pages:
