--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -588,9 +588,9 @@ WordPress plugin cta:
 WordPress plugin ultimate-member:
   1:
     location: ['/wp-content/plugins/ultimate-member/readme.txt']
-    secure_version: 'N/A'
+    secure_version: '2.6.7'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2023-3460 https://www.wordfence.com/blog/2023/06/psa-unpatched-critical-privilege-escalation-vulnerability-in-ultimate-member-plugin-being-actively-exploited/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2023-3460 https://www.wordfence.com/blog/2023/06/psa-unpatched-critical-privilege-escalation-vulnerability-in-ultimate-member-plugin-being-actively-exploited/ https://blog.wpscan.com/hacking-campaign-actively-exploiting-ultimate-member-plugin/ https://thehackernews.com/2023/07/unpatched-wordpress-plugin-flaw-could.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin wp-symposium-pro:
