--- a/yamls/piwigo.yml
+++ b/yamls/piwigo.yml
@@ -72,6 +72,8 @@
 # CVE-2021-40553 TODO
 # CVE-2022-32297 TODO 12.2.0 is vulnerable. advisory https://github.com/sth276/research/blob/main/piwigo_vul/Second-Order%20SQL%20Injection%20Vulnerabilities%20in%20Piwigo.md
 # CVE-2022-37183 TODO 12.3.0 is vulnerable. advisory https://github.com/nu11secur1ty/CVE-nu11secur1ty/tree/main/vendors/Piwigo/2022/12.3.0
+# CVE-2022-48007 TODO
+# CVE-2023-26876 TODO 13.5.0 is vulnerable http://seclists.org/fulldisclosure/2023/Apr/13 http://packetstormsecurity.com/files/172059/Piwigo-13.5.0-SQL-Injection.html https://gist.github.com/rodnt/a190d14d1715890d8df19bad58b90693
 Piwigo:
   1:
     location: ['/include/constants.php']
