--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -4323,7 +4323,7 @@ WordPress plugin royal-elementor-addons:
     location: ['/wp-content/plugins/royal-elementor-addons/readme.txt']
     secure_version: '1.3.79'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2022-4700 https://nvd.nist.gov/vuln/detail/CVE-2022-4701 https://nvd.nist.gov/vuln/detail/CVE-2022-4702 https://nvd.nist.gov/vuln/detail/CVE-2022-4703 https://nvd.nist.gov/vuln/detail/CVE-2022-4704 https://nvd.nist.gov/vuln/detail/CVE-2022-4705 https://nvd.nist.gov/vuln/detail/CVE-2022-4707 https://nvd.nist.gov/vuln/detail/CVE-2022-4708 https://nvd.nist.gov/vuln/detail/CVE-2022-4709 https://nvd.nist.gov/vuln/detail/CVE-2022-4710 https://nvd.nist.gov/vuln/detail/CVE-2022-4711 https://www.wordfence.com/blog/2023/01/eleven-vulnerabilities-patched-in-royal-elementor-addons/ https://www.wordfence.com/blog/2023/10/psa-critical-unauthenticated-arbitrary-file-upload-vulnerability-in-royal-elementor-addons-and-templates-being-actively-exploited/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2023-5360 https://www.wordfence.com/blog/2023/10/psa-critical-unauthenticated-arbitrary-file-upload-vulnerability-in-royal-elementor-addons-and-templates-being-actively-exploited/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin wp-data-access:
